--- a/hw04/src/main/resources/messages.properties
+++ b/hw04/src/main/resources/messages.properties
@@ -9,3 +9,4 @@ StudentService.input.last.name=Please input your last name
 TestService.answer.the.questions=Please answer the questions below
 TestService.answer.the.question=Question: {0}
 TestService.answer.invalid=Invalid answer
+ShellCommands.end.of.test=End of test
