--- a/hw04/src/main/resources/messages_ru_RU.properties
+++ b/hw04/src/main/resources/messages_ru_RU.properties
@@ -9,3 +9,4 @@ StudentService.input.last.name=\u041F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\
 TestService.answer.the.questions=\u041F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430, \u043E\u0442\u0432\u0435\u0442\u044C\u0442\u0435 \u043D\u0430 \u0432\u043E\u043F\u0440\u043E\u0441\u044B \u043D\u0438\u0436\u0435
 TestService.answer.the.question=\u0412\u043E\u043F\u0440\u043E\u0441: {0}
 TestService.answer.invalid=\u041D\u0435 \u043A\u043E\u0440\u0440\u0435\u043A\u0442\u043D\u044B\u0439 \u043E\u0442\u0432\u0435\u0442
+ShellCommands.end.of.test=\u0422\u0435\u0441\u0442\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u0435 \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043d\u043e
