--- a/hw09/src/main/resources/messages.properties
+++ b/hw09/src/main/resources/messages.properties
@@ -35,9 +35,11 @@ book-field-title=Title
 book-field-author=Author
 book-field-genre=Genre
 
-comment-table-header=All comments on the book
-comment-form-header=Comment Info:
+comment-table-header=All comments by book: {0}
+comment-update-form-header=Comment Info:
+comment-add-form-header=Write comment:
 comment-field-id=ID
 comment-field-description=Description
+comment-field-bookId=BookID
 
 error-page=Error page
