--- a/hw09/src/main/resources/messages_en.properties
+++ b/hw09/src/main/resources/messages_en.properties
@@ -14,6 +14,7 @@ add-button-caption=Add
 save-button-caption=Save
 delete-button-caption=Delete
 cancel-button-caption=Cancel
+confirm-button-caption=Confirm
 comment-button-caption=Get comments
 
 table-column-action=Action
@@ -41,5 +42,7 @@ comment-add-form-header=Write comment:
 comment-field-id=ID
 comment-field-description=Description
 comment-field-bookId=BookID
+
+confirm-header=Are you sure?
 
 error-page=Error page
