--- a/hw09/src/main/resources/messages_ru.properties
+++ b/hw09/src/main/resources/messages_ru.properties
@@ -14,6 +14,7 @@ add-button-caption=\u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c
 save-button-caption=\u0421\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c
 delete-button-caption=\u0423\u0434\u0430\u043b\u0438\u0442\u044c
 cancel-button-caption=\u041e\u0442\u043c\u0435\u043d\u0430
+confirm-button-caption=\u041f\u043e\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u044c
 comment-button-caption=\u041f\u043e\u043a\u0430\u0437\u0430\u0442\u044c\u0020\u043a\u043e\u043c\u043c\u0435\u043d\u0442\u0430\u0440\u0438\u0438
 
 table-column-action=\u0414\u0435\u0439\u0441\u0442\u0432\u0438\u0435
@@ -41,5 +42,7 @@ comment-add-form-header=\u041d\u0430\u043f\u0438\u0448\u0438\u0442\u0435\u0020\u
 comment-field-id=\u0410\u0439\u0414\u0438
 comment-field-description=\u041e\u043f\u0438\u0441\u0430\u043d\u0438\u0435
 comment-field-bookId=\u0410\u0439\u0414\u0438\u0020\u043a\u043d\u0438\u0433\u0438
+
+confirm-header=\u0412\u044b\u0020\u0443\u0432\u0435\u0440\u0435\u043d\u044b\u003f
 
 error-page=\u041e\u0448\u0438\u0431\u043a\u0430
