Корректировка визуальной составляющей. Тесты контроллеров

--- a/hw09/src/main/resources/messages_en.properties
+++ b/hw09/src/main/resources/messages_en.properties
@@ -15,7 +15,7 @@ save-button-caption=Save
 delete-button-caption=Delete
 cancel-button-caption=Cancel
 confirm-button-caption=Confirm
-comment-button-caption=Get comments
+comment-button-caption=Show
 
 table-column-action=Action
 
@@ -36,12 +36,13 @@ book-field-title=Title
 book-field-author=Author
 book-field-genre=Genre
 
-comment-table-header=All comments by book: {0}
+comment-table-header=All comments by book {0}
 comment-update-form-header=Comment Info:
-comment-add-form-header=Write comment:
+comment-add-form-header=Add comment:
 comment-field-id=ID
 comment-field-description=Description
 comment-field-bookId=BookID
+comment-field-header=Comments
 
 confirm-header=Are you sure?
 
