--- a/hw09/src/main/resources/messages_en.properties
+++ b/hw09/src/main/resources/messages_en.properties
@@ -44,6 +44,12 @@ comment-field-description=Description
 comment-field-bookId=BookID
 comment-field-header=Comments
 
-confirm-header=Are you sure?
+confirm-header=Are you sure that you want to delete {0}?
 
 error-page=Error page
+
+title-field-should-not-be-blank=Title field should not be blank
+title-field-should-has-expected-size=Title field should be under 30 characters
+
+description-field-should-not-be-blank=Description field should not be blank
+description-field-should-has-expected-size=Description field should be between 5 and 100 characters
