--- a/hw09/src/main/resources/messages_en.properties
+++ b/hw09/src/main/resources/messages_en.properties
@@ -46,7 +46,7 @@ comment-field-header=Comments
 
 confirm-header=Are you sure that you want to delete {0}?
 
-error-page=Error page
+error-page=Error: {0}
 
 title-field-should-not-be-blank=Title field should not be blank
 title-field-should-has-expected-size=Title field should be under 30 characters
