Стили (CSS) вынесены в отдельный файл

--- a/hw10/src/main/resources/messages.properties
+++ b/hw10/src/main/resources/messages.properties
@@ -9,13 +9,14 @@ genre-switch-button-caption=Genres
 
 main-page-button-caption=Main page
 back-button-caption=Back
+back-to-allBooks-button-caption=Back to books
 edit-button-caption=Edit
 add-button-caption=Add
 save-button-caption=Save
 delete-button-caption=Delete
 cancel-button-caption=Cancel
 confirm-button-caption=Confirm
-comment-button-caption=Get comments
+comment-button-caption=Show
 
 table-column-action=Action
 
@@ -36,13 +37,20 @@ book-field-title=Title
 book-field-author=Author
 book-field-genre=Genre
 
-comment-table-header=All comments by book: {0}
+comment-table-header=All comments by book {0}
 comment-update-form-header=Comment Info:
-comment-add-form-header=Write comment:
+comment-add-form-header=Add comment:
 comment-field-id=ID
 comment-field-description=Description
 comment-field-bookId=BookID
+comment-field-header=Comments
 
-confirm-header=Are you sure?
+confirm-header=Are you sure that you want to delete {0}?
 
-error-page=Error page
+error-page=Error: {0}
+
+title-field-should-not-be-blank=Title field should not be blank
+title-field-should-has-expected-size=Title field should be under 30 characters
+
+description-field-should-not-be-blank=Description field should not be blank
+description-field-should-has-expected-size=Description field should be between 5 and 100 characters
