--- a/hw10/src/main/resources/messages_en.properties
+++ b/hw10/src/main/resources/messages_en.properties
@@ -9,6 +9,7 @@ genre-switch-button-caption=Genres
 
 main-page-button-caption=Main page
 back-button-caption=Back
+back-to-allBooks-button-caption=Back to books
 edit-button-caption=Edit
 add-button-caption=Add
 save-button-caption=Save
