--- a/hw10/src/main/resources/messages_ru.properties
+++ b/hw10/src/main/resources/messages_ru.properties
@@ -9,6 +9,7 @@ genre-switch-button-caption=\u0416\u0430\u043d\u0440\u044b
 
 main-page-button-caption=\u0413\u043b\u0430\u0432\u043d\u0430\u044f\u0020\u0441\u0442\u0440\u0430\u043d\u0438\u0446\u0430
 back-button-caption=\u041d\u0430\u0437\u0430\u0434
+back-to-allBooks-button-caption=\u041d\u0430\u0437\u0430\u0434\u0020\u043a\u0020\u043a\u043d\u0438\u0433\u0430\u043c
 edit-button-caption=\u0420\u0435\u0434\u0430\u043a\u0442\u0438\u0440\u043e\u0432\u0430\u0442\u044c
 add-button-caption=\u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c
 save-button-caption=\u0421\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c
