--- a/hw10/src/main/resources/messages_en.properties
+++ b/hw10/src/main/resources/messages_en.properties
@@ -45,7 +45,7 @@ comment-field-description=Description
 comment-field-bookId=BookID
 comment-field-header=Comments
 
-confirm-header=Are you sure that you want to delete {0}?
+confirm-header=Are you sure?
 
 error-page=Error: {0}
 
