--- a/hw10/src/main/resources/messages_en.properties
+++ b/hw10/src/main/resources/messages_en.properties
@@ -2,6 +2,16 @@ lang-switcher-header=Select language
 en-lang-switch-button-caption=Language - EN
 ru-lang-switch-button-caption=Language - RU
 
+main-page=Main
+all-books-page=Books
+all-authors-page=Authors
+all-genres-page=Genres
+all-comments-page=Comments
+edit-page=Edit
+add-page=Add
+delete-page=Delete
+error-page=Error
+
 page-switcher-header=Select page
 book-switch-button-caption=Books
 author-switch-button-caption=Authors
@@ -16,7 +26,8 @@ save-button-caption=Save
 delete-button-caption=Delete
 cancel-button-caption=Cancel
 confirm-button-caption=Confirm
-comment-button-caption=Show
+comment-get-button-caption=Show comments
+comment-add-button-caption=Add comment
 
 table-column-action=Action
 
@@ -47,7 +58,7 @@ comment-field-header=Comments
 
 confirm-header=Are you sure?
 
-error-page=Error: {0}
+error-message=Error: {0}
 
 title-field-should-not-be-blank=Title field should not be blank
 title-field-should-has-expected-size=Title field should be under 30 characters
