--- a/hw10/src/main/resources/messages_ru.properties
+++ b/hw10/src/main/resources/messages_ru.properties
@@ -2,6 +2,16 @@ lang-switcher-header=\u0412\u044B\u0431\u043E\u0440 \u044F\u0437\u044B\u043A\u04
 en-lang-switch-button-caption=\u042F\u0437\u044B\u043A - EN
 ru-lang-switch-button-caption=\u042F\u0437\u044B\u043A - RU
 
+main-page=\u0413\u043b\u0430\u0432\u043d\u0430\u044f
+all-books-page=\u041a\u043d\u0438\u0433\u0438
+all-authors-page=\u0410\u0432\u0442\u043e\u0440\u044b
+all-genres-page=\u0416\u0430\u043d\u0440\u044b
+all-comments-page=\u041a\u043e\u043c\u043c\u0435\u043d\u0442\u0430\u0440\u0438\u0438
+edit-page=\u0420\u0435\u0434\u0430\u043a\u0442\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u0435
+add-page=\u0414\u043e\u0431\u0430\u0432\u043b\u0435\u043d\u0438\u0435
+delete-page=\u0423\u0434\u0430\u043b\u0435\u043d\u0438\u0435
+error-page=\u041e\u0448\u0438\u0431\u043a\u0430
+
 page-switcher-header=\u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435\u0020\u0441\u0442\u0440\u0430\u043d\u0438\u0446\u0443
 book-switch-button-caption=\u041a\u043d\u0438\u0433\u0438
 author-switch-button-caption=\u0410\u0432\u0442\u043e\u0440\u044b
@@ -16,7 +26,8 @@ save-button-caption=\u0421\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c
 delete-button-caption=\u0423\u0434\u0430\u043b\u0438\u0442\u044c
 cancel-button-caption=\u041e\u0442\u043c\u0435\u043d\u0430
 confirm-button-caption=\u041f\u043e\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u044c
-comment-button-caption=\u041f\u043e\u043a\u0430\u0437\u0430\u0442\u044c
+comment-get-button-caption=\u041f\u043e\u043a\u0430\u0437\u0430\u0442\u044c\u0020\u043a\u043e\u043c\u043c\u0435\u043d\u0442\u0430\u0440\u0438\u0438
+comment-add-button-caption=\u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c\u0020\u043a\u043e\u043c\u043c\u0435\u043d\u0442\u0430\u0440\u0438\u0439
 
 table-column-action=\u0414\u0435\u0439\u0441\u0442\u0432\u0438\u0435
 
@@ -47,7 +58,7 @@ comment-field-header=\u041a\u043e\u043c\u043c\u0435\u043d\u0442\u0430\u0440\u043
 
 confirm-header=\u0412\u044b\u0020\u0443\u0432\u0435\u0440\u0435\u043d\u044b?
 
-error-page=\u041e\u0448\u0438\u0431\u043a\u0430\u003a {0}
+error-message=\u041e\u0448\u0438\u0431\u043a\u0430\u003a {0}
 
 title-field-should-not-be-blank=\u041d\u0430\u0437\u0432\u0430\u043d\u0438\u0435\u0020\u043a\u043d\u0438\u0433\u0438\u0020\u043d\u0435\u0020\u0434\u043e\u043b\u0436\u043d\u043e\u0020\u0431\u044b\u0442\u044c\u0020\u043f\u0443\u0441\u0442\u044b\u043c
 title-field-should-has-expected-size=\u041d\u0430\u0437\u0432\u0430\u043d\u0438\u0435\u0020\u043a\u043d\u0438\u0433\u0438\u0020\u0434\u043e\u043b\u0436\u043d\u043e\u0020\u0431\u044b\u0442\u044c\u0020\u0434\u043e\u0020\u0033\u0030\u0020\u0441\u0438\u043c\u0432\u043e\u043b\u043e\u0432
