--- a/hw11/src/main/resources/messages_en.properties
+++ b/hw11/src/main/resources/messages_en.properties
@@ -2,13 +2,23 @@ lang-switcher-header=Select language
 en-lang-switch-button-caption=Language - EN
 ru-lang-switch-button-caption=Language - RU
 
+main-page=Main
+all-books-page=Books
+all-authors-page=Authors
+all-genres-page=Genres
+all-comments-page=Comments
+edit-page=Edit
+add-page=Add
+delete-page=Delete
+error-page=Error
+
 page-switcher-header=Select page
 book-switch-button-caption=Books
 author-switch-button-caption=Authors
 genre-switch-button-caption=Genres
 
 main-page-button-caption=Main page
-back-button-caption=Back
+back-button-caption=Back to books
 edit-button-caption=Edit
 add-button-caption=Add
 save-button-caption=Save
@@ -46,7 +56,7 @@ comment-field-header=Comments
 
 confirm-header=Are you sure that you want to delete {0}?
 
-error-page=Error: {0}
+error-message=Error: {0}
 
 title-field-should-not-be-blank=Title field should not be blank
 title-field-should-has-expected-size=Title field should be under 30 characters
