Промежуточный коммит. Добавлена сущность - пользователь и form-based аутентификация, реализован UserDetailsService.

--- a/hw11/src/main/resources/messages_en.properties
+++ b/hw11/src/main/resources/messages_en.properties
@@ -7,6 +7,7 @@ all-books-page=Books
 all-authors-page=Authors
 all-genres-page=Genres
 all-comments-page=Comments
+all-users-page=Users
 edit-page=Edit
 add-page=Add
 delete-page=Delete
@@ -16,6 +17,7 @@ page-switcher-header=Select page
 book-switch-button-caption=Books
 author-switch-button-caption=Authors
 genre-switch-button-caption=Genres
+user-switch-button-caption=Users
 
 main-page-button-caption=Main page
 back-button-caption=Back to books
@@ -53,6 +55,12 @@ comment-field-id=ID
 comment-field-description=Description
 comment-field-bookId=BookID
 comment-field-header=Comments
+
+user-table-header=Users:
+user-field-id=ID
+user-field-login=Login
+user-field-password=Password
+user-field-role=Role
 
 confirm-header=Are you sure that you want to delete {0}?
 
