--- a/hw11/src/main/resources/messages.properties
+++ b/hw11/src/main/resources/messages.properties
@@ -2,20 +2,32 @@ lang-switcher-header=Select language
 en-lang-switch-button-caption=Language - EN
 ru-lang-switch-button-caption=Language - RU
 
+main-page=Main
+all-books-page=Books
+all-authors-page=Authors
+all-genres-page=Genres
+all-comments-page=Comments
+all-users-page=Users
+edit-page=Edit
+add-page=Add
+delete-page=Delete
+error-page=Error
+
 page-switcher-header=Select page
 book-switch-button-caption=Books
 author-switch-button-caption=Authors
 genre-switch-button-caption=Genres
+user-switch-button-caption=Users
 
 main-page-button-caption=Main page
-back-button-caption=Back
+back-button-caption=Back to books
 edit-button-caption=Edit
 add-button-caption=Add
 save-button-caption=Save
 delete-button-caption=Delete
 cancel-button-caption=Cancel
 confirm-button-caption=Confirm
-comment-button-caption=Get comments
+comment-button-caption=Show
 
 table-column-action=Action
 
@@ -36,13 +48,26 @@ book-field-title=Title
 book-field-author=Author
 book-field-genre=Genre
 
-comment-table-header=All comments by book: {0}
+comment-table-header=All comments by book {0}
 comment-update-form-header=Comment Info:
-comment-add-form-header=Write comment:
+comment-add-form-header=Add comment:
 comment-field-id=ID
 comment-field-description=Description
 comment-field-bookId=BookID
+comment-field-header=Comments
 
-confirm-header=Are you sure?
+user-table-header=Users:
+user-field-id=ID
+user-field-login=Login
+user-field-password=Password
+user-field-role=Role
 
-error-page=Error page
+confirm-header=Are you sure that you want to delete {0}?
+
+error-message=Error: {0}
+
+title-field-should-not-be-blank=Title field should not be blank
+title-field-should-has-expected-size=Title field should be under 30 characters
+
+description-field-should-not-be-blank=Description field should not be blank
+description-field-should-has-expected-size=Description field should be between 5 and 100 characters
