--- a/hw11/src/main/resources/messages_ru.properties
+++ b/hw11/src/main/resources/messages_ru.properties
@@ -7,6 +7,7 @@ all-books-page=\u041a\u043d\u0438\u0433\u0438
 all-authors-page=\u0410\u0432\u0442\u043e\u0440\u044b
 all-genres-page=\u0416\u0430\u043d\u0440\u044b
 all-comments-page=\u041a\u043e\u043c\u043c\u0435\u043d\u0442\u0430\u0440\u0438\u0438
+all-users-page=\u041f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u0438
 edit-page=\u0420\u0435\u0434\u0430\u043a\u0442\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u0435
 add-page=\u0414\u043e\u0431\u0430\u0432\u043b\u0435\u043d\u0438\u0435
 delete-page=\u0423\u0434\u0430\u043b\u0435\u043d\u0438\u0435
@@ -16,6 +17,7 @@ page-switcher-header=\u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435\u0020\u044
 book-switch-button-caption=\u041a\u043d\u0438\u0433\u0438
 author-switch-button-caption=\u0410\u0432\u0442\u043e\u0440\u044b
 genre-switch-button-caption=\u0416\u0430\u043d\u0440\u044b
+user-switch-button-caption=\u041f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u0438
 
 main-page-button-caption=\u0413\u043b\u0430\u0432\u043d\u0430\u044f\u0020\u0441\u0442\u0440\u0430\u043d\u0438\u0446\u0430
 back-button-caption=\u041d\u0430\u0437\u0430\u0434\u0020\u043a\u0020\u043a\u043d\u0438\u0433\u0430\u043c
@@ -53,6 +55,12 @@ comment-field-id=ID
 comment-field-description=\u041e\u043f\u0438\u0441\u0430\u043d\u0438\u0435
 comment-field-bookId=\u0410\u0439\u0414\u0438\u0020\u043a\u043d\u0438\u0433\u0438
 comment-field-header=\u041a\u043e\u043c\u043c\u0435\u043d\u0442\u0430\u0440\u0438\u0438
+
+user-table-header=\u041f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u0438\u003a
+user-field-id=ID
+user-field-login=\u041b\u043e\u0433\u0438\u043d
+user-field-password=\u041f\u0430\u0440\u043e\u043b\u044c
+user-field-role=\u0420\u043e\u043b\u044c
 
 confirm-header=\u0412\u044b\u0020\u0443\u0432\u0435\u0440\u0435\u043d\u044b\u0020\u0447\u0442\u043e\u0020\u0445\u043e\u0442\u0438\u0442\u0435\u0020\u0443\u0434\u0430\u043b\u0438\u0442\u044c {0}?
 
