Работа над ошибками. Ролевая модель реализована через сущность "Authority", в т.ч. в тестах

--- a/hw12/src/main/resources/messages_en.properties
+++ b/hw12/src/main/resources/messages_en.properties
@@ -60,7 +60,7 @@ user-table-header=Users:
 user-field-id=ID
 user-field-login=Login
 user-field-password=Password
-user-field-role=Role
+user-field-Authority=Authority
 
 confirm-header=Are you sure that you want to delete {0}?
 
