--- a/hw12/src/main/resources/messages_ru.properties
+++ b/hw12/src/main/resources/messages_ru.properties
@@ -60,7 +60,7 @@ user-table-header=\u041f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u
 user-field-id=ID
 user-field-login=\u041b\u043e\u0433\u0438\u043d
 user-field-password=\u041f\u0430\u0440\u043e\u043b\u044c
-user-field-role=\u0420\u043e\u043b\u044c
+user-field-authority=\u041f\u0440\u0430\u0432\u0430\u0020\u0434\u043e\u0441\u0442\u0443\u043f\u0430
 
 confirm-header=\u0412\u044b\u0020\u0443\u0432\u0435\u0440\u0435\u043d\u044b\u0020\u0447\u0442\u043e\u0020\u0445\u043e\u0442\u0438\u0442\u0435\u0020\u0443\u0434\u0430\u043b\u0438\u0442\u044c {0}?
 
