Добавлена связь комментария с пользователем.
Редактировать и удалять комментарии может только тот, кто их создал (пока работает на предустановленных данных). Новый комментарий, связывается с пользователем, который его добавил (для дальнейшей настройки доступа).

--- a/hw12/src/main/resources/messages.properties
+++ b/hw12/src/main/resources/messages.properties
@@ -55,6 +55,7 @@ comment-field-id=ID
 comment-field-description=Description
 comment-field-bookId=BookID
 comment-field-header=Comments
+comment-field-userId=UserID
 
 user-table-header=Users:
 user-field-id=ID
