--- a/hw12/src/main/resources/messages_en.properties
+++ b/hw12/src/main/resources/messages_en.properties
@@ -55,6 +55,7 @@ comment-field-id=ID
 comment-field-description=Description
 comment-field-bookId=BookID
 comment-field-header=Comments
+comment-field-userId=UserID
 
 user-table-header=Users:
 user-field-id=ID
