--- a/hw12/src/main/resources/messages_ru.properties
+++ b/hw12/src/main/resources/messages_ru.properties
@@ -55,6 +55,7 @@ comment-field-id=ID
 comment-field-description=\u041e\u043f\u0438\u0441\u0430\u043d\u0438\u0435
 comment-field-bookId=\u0410\u0439\u0414\u0438\u0020\u043a\u043d\u0438\u0433\u0438
 comment-field-header=\u041a\u043e\u043c\u043c\u0435\u043d\u0442\u0430\u0440\u0438\u0438
+comment-field-userId=\u0418\u0434\u0435\u043d\u0442\u0438\u0444\u0438\u043a\u0430\u0442\u043e\u0440\u0020\u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044f
 
 user-table-header=\u041f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u0438\u003a
 user-field-id=ID
