--- a/project/src/main/resources/messages.properties
+++ b/project/src/main/resources/messages.properties
@@ -4,6 +4,21 @@ ru-lang-switch-button-caption=Language - RU
 
 page-switcher-header=Select page
 
+base-info=Base info
+types-and-preparation=Types of waste accepted and preparation procedure
+glass-type=Glass
+accept-glass-waste=We accept: bottles and jars of any shape, color and size, perfume bottles, glassware, medical glass (ampoules, test tubes)
+deny-glass-waste=Not accepted: mirrors, crystal, ceramics, porcelain, earthenware, light bulbs, thermometers
+preparation-glass-waste=Preparation: rinse, put in a strong box or a thick plastic (not paper) bag so that the box can be closed and the bag tied. Put broken glass separately in a box or other sealable glass container. Perfume bottles do not need to be disassembled, rings from the necks of bottles do not need to be removed, paper labels do not need to be washed off
+paper-type=Paper
+accept-paper-waste=We accept: books, office paper, newspapers, magazines (including glossy ones), single-layer cardboard, corrugated cardboard
+deny-paper-waste=The following are not accepted: foil and laminated paper, cash receipts, napkins, tracing paper
+preparation-paper-waste=Preparation: gather tightly into piles, tie with rope or regular tape (not paper)
+plastic-type=Plastic
+accept-plastic-waste=We accept: polyethyleneterephthalate (PET, PETE, PET-R, PET-G, C/PET) - bottles, jars with a dot on the bottom, any color and transparency; polyvinyl chloride (PVC) - cake and other confectionery packaging, medicine bottles, air mattresses, shrink film; polypropylene (PP) - food containers, ice cream tubs, disposable drinking straws, polystyrene (PS, SAN) - containers, disposable tableware, foam plastic
+deny-plastic-waste=Not accepted: soft and vacuum packaging with PET marking, plastic with marking (HDPE, PE-HD, PE, LDPE, PE-LD, C/LDPE, PP/LDPE, PS, OTHER)
+preparation-plastic-waste=Preparation: wash all containers from food residues, household chemicals and hygiene products. Empty containers from household chemicals as much as possible and close with a lid. Hard plastic should be collected separately according to markings. Put each type in a clean plastic bag so that the bag can be tied. Labels from containers can be left on, except for shrink film, it must be removed, folded separately and handed over with PVC
+
 main-page-title=Main
 add-page-title=Add
 delete-page-title=Delete
